<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/col_news"
        android:icon="@drawable/nav_news"
        android:title="@string/news" />

    <item
        android:id="@+id/col_paper"
        android:icon="@drawable/paper"
        android:title="@string/paper" />

    <item
        android:id="@+id/col_data"
        android:icon="@drawable/data"
        android:title="@string/data" />

    <item
        android:id="@+id/col_graph"
        android:icon="@drawable/graph"
        android:title="@string/graph" />
    <item
        android:id="@+id/col_cluster"
        android:icon="@drawable/cluster"
        android:title="@string/cluster" />
    <item
        android:id="@+id/col_scholar"
        android:icon="@drawable/scholar"
        android:title="@string/scholar" />
    <item
        android:id="@+id/col_history"
        android:icon="@drawable/history"
        android:title="@string/history" />
</menu>
